--- a/_posts/2017-02-25-搭建jekyll网站.markdown
+++ b/_posts/2017-02-25-搭建jekyll网站.markdown
@@ -24,17 +24,27 @@ sudo gem install bundle
 2.由于是要托管在github上面，所以要创建一个github帐号，[网站][sec-site]
 
 3.点击NEW repository,创建一个repository(注意：名字要xxx.github.io.git格式)然后将其colne到本地 如：
+{% highlight ruby %}
+def show
 
 git clone https://github.com/yourname/yourname.github.io.git
+
+end
+{% endhighlight %}
 
 4.将jekyll生成的yourblogname文件夹下的所有文件都copy到clone下来的yourname.github.io.git下面
 
 5.进入到yourname.github.io.git文件夹下面 ：
+{% highlight ruby %}
+def show
 
 git status #会看到所有的未提交的文件
 git add . #将所有文件添加到git本地库
 git commit -m “commit message”#添加提交信息
 git push origin master #将提交同步到github创库里
+
+end
+{% endhighlight %}
 
 
 
